<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:weightSum="3"
    android:orientation="vertical"

    tools:context="fasb.edu.br.myappimc.IMCPrincipal">

    <!--Topo-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:theme="@style/StiloFasb">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/StiloFasb"
            android:text="@string/app_titulo" />

    </LinearLayout>

    <!--Centro-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">

        <!--edits-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">

            <!--edit do peso-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/label_peso"/>

                <EditText
                    android:id="@+id/edit_peso"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_edit"

                    android:inputType="numberDecimal"
                    android:textAlignment="center" />

            </LinearLayout>

            <!--edit da altura-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/label_altura"/>

                <EditText
                    android:id="@+id/edit_altura"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_edit"
                    android:inputType="numberDecimal"
                    android:textAlignment="center" />
            </LinearLayout>

        </LinearLayout>

        <!--botão-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnCalc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_calc"/>

        </LinearLayout>


    </LinearLayout>

    <!--Rodapé-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </LinearLayout>

</LinearLayout>
